[project]
name = "potw1390"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pysmt (>=0.9.6,<0.10.0)",
    "setuptools (>=75.8.2,<76.0.0)",
    "sympy (>=1.13.3,<2.0.0)",
    "poetry (>=2.1.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "potw1390", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
